fixed alignment for enroll-students-spreadsheet-buttons

--- a/src/web/app/pages-instructor/instructor-course-enroll-page/instructor-course-enroll-page.component.scss
+++ b/src/web/app/pages-instructor/instructor-course-enroll-page/instructor-course-enroll-page.component.scss
@@ -75,3 +75,8 @@
     color: blue;
     cursor: pointer;
 }
+
+.enroll-button-group {
+    width: 50%;
+    display: inline-block;
+}
